{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 1782,
  "lineage": "197f9f0c-3075-b8cd-b62f-3d7a0a6e51d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "website-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:807903949163:loadbalancer/app/website-alb/2b81770905fe4a2d",
            "arn_suffix": "app/website-alb/2b81770905fe4a2d",
            "dns_name": "website-alb-1003194684.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:807903949163:loadbalancer/app/website-alb/2b81770905fe4a2d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "website-alb",
            "security_groups": [
              "sg-021d19410948e9676"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f79eb50be646b18"
              },
              {
                "subnet_id": "subnet-0f4a3a1d916e7bd03"
              }
            ],
            "subnets": [
              "subnet-04f79eb50be646b18",
              "subnet-0f4a3a1d916e7bd03"
            ],
            "tags": {
              "Name": "example-saas-production-alb"
            },
            "tags_all": {
              "Name": "example-saas-production-alb",
              "Owner": "Seb",
              "Project": "ECS-Attacks",
              "Team": "Ptest"
            },
            "vpc_id": "vpc-0361ad7e97b660988",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.pub_subnet",
            "aws_subnet.pub_subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "nginx-listeners",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:807903949163:listener/app/website-alb/2b81770905fe4a2d/8243fb5f420f31b0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:807903949163:targetgroup/website-tg/48a7582597b4112a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:807903949163:listener/app/website-alb/2b81770905fe4a2d/8243fb5f420f31b0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:807903949163:loadbalancer/app/website-alb/2b81770905fe4a2d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Owner": "Seb",
              "Project": "ECS-Attacks",
              "Team": "Ptest"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.website-alb",
            "aws_alb_target_group.website-tg",
            "aws_security_group.alb_sg",
            "aws_subnet.pub_subnet",
            "aws_subnet.pub_subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "website-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:807903949163:targetgroup/website-tg/48a7582597b4112a",
            "arn_suffix": "targetgroup/website-tg/48a7582597b4112a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:807903949163:targetgroup/website-tg/48a7582597b4112a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "website-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Owner": "Seb",
              "Project": "ECS-Attacks",
              "Team": "Ptest"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0361ad7e97b660988"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a6b2ddbb57eb4b55",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-211-209-191.us-west-2.compute.amazonaws.com",
            "public_ip": "34.211.209.191",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:807903949163:internet-gateway/igw-07db732fa1723a09b",
            "id": "igw-07db732fa1723a09b",
            "owner_id": "807903949163",
            "tags_all": {
              "Owner": "Seb",
              "Project": "ECS-Attacks",
              "Team": "Ptest"
            },
            "vpc_id": "vpc-0361ad7e97b660988"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GATEWAY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6b2ddbb57eb4b55",
            "id": "nat-050a8526c8beaace3",
            "network_interface_id": "eni-06ff814b166b725bc",
            "private_ip": "10.0.1.106",
            "public_ip": "34.211.209.191",
            "subnet_id": "subnet-0f4a3a1d916e7bd03",
            "tags_all": {
              "Owner": "Seb",
              "Project": "ECS-Attacks",
              "Team": "Ptest"
            }
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT-Gateway-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:807903949163:route-table/rtb-02f2eaeac885a74e3",
            "id": "rtb-02f2eaeac885a74e3",
            "owner_id": "807903949163",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-050a8526c8beaace3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway"
            },
            "tags_all": {
              "Name": "Route Table for NAT Gateway",
              "Owner": "Seb",
              "Project": "ECS-Attacks",
              "Team": "Ptest"
            },
            "vpc_id": "vpc-0361ad7e97b660988"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:807903949163:route-table/rtb-0149b14af8a905798",
            "id": "rtb-0149b14af8a905798",
            "owner_id": "807903949163",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07db732fa1723a09b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Owner": "Seb",
              "Project": "ECS-Attacks",
              "Team": "Ptest"
            },
            "vpc_id": "vpc-0361ad7e97b660988"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028d4636ea7a601df",
            "route_table_id": "rtb-02f2eaeac885a74e3",
            "subnet_id": "subnet-049276899a77e3993"
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.NAT-Gateway-RT",
            "aws_subnet.priv_subnet",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ad498c2666e80af",
            "route_table_id": "rtb-0149b14af8a905798",
            "subnet_id": "subnet-0f4a3a1d916e7bd03"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068a0708fc8cabea5",
            "route_table_id": "rtb-0149b14af8a905798",
            "subnet_id": "subnet-04f79eb50be646b18"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public",
            "aws_subnet.pub_subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:807903949163:security-group/sg-021d19410948e9676",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-021d19410948e9676",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210603221941182800000003",
            "name_prefix": "terraform-",
            "owner_id": "807903949163",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Owner": "Seb",
              "Project": "ECS-Attacks",
              "Team": "Ptest"
            },
            "timeouts": null,
            "vpc_id": "vpc-0361ad7e97b660988"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:807903949163:security-group/sg-0c8675e04658ffb18",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0c8675e04658ffb18",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20210603221941184900000004",
            "name_prefix": "terraform-",
            "owner_id": "807903949163",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Owner": "Seb",
              "Project": "ECS-Attacks",
              "Team": "Ptest"
            },
            "timeouts": null,
            "vpc_id": "vpc-0361ad7e97b660988"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:807903949163:subnet/subnet-049276899a77e3993",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-049276899a77e3993",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807903949163",
            "tags_all": {
              "Owner": "Seb",
              "Project": "ECS-Attacks",
              "Team": "Ptest"
            },
            "vpc_id": "vpc-0361ad7e97b660988"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:807903949163:subnet/subnet-0f4a3a1d916e7bd03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f4a3a1d916e7bd03",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807903949163",
            "tags_all": {
              "Owner": "Seb",
              "Project": "ECS-Attacks",
              "Team": "Ptest"
            },
            "vpc_id": "vpc-0361ad7e97b660988"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:807903949163:subnet/subnet-04f79eb50be646b18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04f79eb50be646b18",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807903949163",
            "tags_all": {
              "Owner": "Seb",
              "Project": "ECS-Attacks",
              "Team": "Ptest"
            },
            "vpc_id": "vpc-0361ad7e97b660988"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:807903949163:vpc/vpc-0361ad7e97b660988",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be747de4dc19c756",
            "default_route_table_id": "rtb-05ef15a8e872306a2",
            "default_security_group_id": "sg-025da5a04e17565f9",
            "dhcp_options_id": "dopt-fff1d387",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0361ad7e97b660988",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05ef15a8e872306a2",
            "owner_id": "807903949163",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC",
              "Owner": "Seb",
              "Project": "ECS-Attacks",
              "Team": "Ptest"
            }
          }
        }
      ]
    }
  ]
}